; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csproc_get_blob.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csproc_get_blob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_blob = type { i32 }
%struct.proc = type { i32, i32, i32* }

@CS_SIGNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cs_blob* @csproc_get_blob(%struct.proc* %0) #0 {
  %2 = alloca %struct.cs_blob*, align 8
  %3 = alloca %struct.proc*, align 8
  store %struct.proc* %0, %struct.proc** %3, align 8
  %4 = load %struct.proc*, %struct.proc** %3, align 8
  %5 = icmp eq %struct.proc* null, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store %struct.cs_blob* null, %struct.cs_blob** %2, align 8
  br label %29

7:                                                ; preds = %1
  %8 = load %struct.proc*, %struct.proc** %3, align 8
  %9 = getelementptr inbounds %struct.proc, %struct.proc* %8, i32 0, i32 2
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* null, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  store %struct.cs_blob* null, %struct.cs_blob** %2, align 8
  br label %29

13:                                               ; preds = %7
  %14 = load %struct.proc*, %struct.proc** %3, align 8
  %15 = getelementptr inbounds %struct.proc, %struct.proc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* @CS_SIGNED, align 4
  %18 = and i32 %16, %17
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store %struct.cs_blob* null, %struct.cs_blob** %2, align 8
  br label %29

21:                                               ; preds = %13
  %22 = load %struct.proc*, %struct.proc** %3, align 8
  %23 = getelementptr inbounds %struct.proc, %struct.proc* %22, i32 0, i32 2
  %24 = load i32*, i32** %23, align 8
  %25 = load %struct.proc*, %struct.proc** %3, align 8
  %26 = getelementptr inbounds %struct.proc, %struct.proc* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call %struct.cs_blob* @ubc_cs_blob_get(i32* %24, i32 -1, i32 %27)
  store %struct.cs_blob* %28, %struct.cs_blob** %2, align 8
  br label %29

29:                                               ; preds = %21, %20, %12, %6
  %30 = load %struct.cs_blob*, %struct.cs_blob** %2, align 8
  ret %struct.cs_blob* %30
}

declare dso_local %struct.cs_blob* @ubc_cs_blob_get(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
